--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -10,7 +10,7 @@
 <ul>
 <a href="recipes/porkChop.html">Air Fryer Pork Chop</a>
 <a href="recipes/roastedBroccoli.html">Roasted Broccoli</a>
-<a href="recipes/glazedDoughnuts">Glazed Doughnuts</a>
+<a href="recipes/glazedDoughnuts.html">Glazed Doughnuts</a>
 </ul>
 </body>
 </html>
