add some styles on it and I putted some div in the tittle of recipes

--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -5,12 +5,18 @@
   <title></title>
 </head>
 <body>
-<h1>Odin recipes</h1> 
+<div id="center">
+<h1 id="main-title">Odin recipes</h1> 
+</div>
 
+<link rel="stylesheet" href="main.css">
 <ul>
+<h1>Recipes:</h1>
+<div id="recipesContainer">
 <a href="recipes/porkChop.html">Air Fryer Pork Chop</a>
 <a href="recipes/roastedBroccoli.html">Roasted Broccoli</a>
 <a href="recipes/glazedDoughnuts.html">Glazed Doughnuts</a>
+</div>
 </ul>
 </body>
 </html>
