--- a/odin-recipes/recipes/glazedDoughnuts.html
+++ b/odin-recipes/recipes/glazedDoughnuts.html
@@ -3,10 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>Glazed Doughnuts</title>
-</head> <body>
+  <link rel="stylesheet" href="../recipePage.css">
+</head>
+<body>
+
+  <div id="title">
   <h1>Glazed Doughnuts</h1>
+  </div>
+
   <img src="../images/glazedDoughnuts.png">
-  <p>For pillowy doughnuts similar to those from popular nationwide bakeries, this recipe uses tangzhong or "water roux," a baking technique with origins in Japan. They are topped with a vanilla glaze.</p>
+  <h3>For pillowy doughnuts similar to those from popular nationwide bakeries, this recipe uses tangzhong or "water roux," a baking technique with origins in Japan. They are topped with a vanilla glaze.</h2>
   <h2>Ingredients:</h2>
   <ul>
     <h3>tangzhong:</h3>
