--- a/odin-recipes/recipes/porkChop.html
+++ b/odin-recipes/recipes/porkChop.html
@@ -3,11 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Air Fryer Pork Chop</title>
+  <link rel="stylesheet" href="../recipePage.css">
 </head>
 <body>
-  <h1>Pork Chop</h1>
+<div>
+<h1>Pork Chop</h1>
+</div>
   <img src="../images/porkChops.png">
-  <p>The air fryer's rapid air circulation yields pork chops that are crispy on the outside, yet flavorful and juicy on the inside.</p>
+  <h3>The air fryer's rapid air circulation yields pork chops that are crispy on the outside, yet flavorful and juicy on the inside.</h3>
   <h2>Ingredients:</h2>
   <ul>
     <li>½ cup grated Parmesan cheese</li>
