--- a/odin-recipes/recipes/roastedBroccoli.html
+++ b/odin-recipes/recipes/roastedBroccoli.html
@@ -3,11 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Roasted Broccoli</title>
+  <link rel="stylesheet" href="../recipePage.css">
 </head>
 <body>
+<div>
   <h1>Roasted Broccoli</h1>
+</div>
   <img src="../images/roastedBroccoli.png">
-  <p>Roasted broccoli is easy to make and so much more flavorsome than boiled. My favorite part is the roasted sliced stem pieces.</p>
+  <h3>Roasted broccoli is easy to make and so much more flavorsome than boiled. My favorite part is the roasted sliced stem pieces.</h3>
   <h2>Ingredients:</h2>
   <ul>
     <li>14 ounces broccoli</li>
