fix div title so css file display correctly

--- a/odin-recipes/recipes/roastedBroccoli.html
+++ b/odin-recipes/recipes/roastedBroccoli.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="../recipePage.css">
 </head>
 <body>
-<div>
+<div title="title">
   <h1>Roasted Broccoli</h1>
 </div>
   <img src="../images/roastedBroccoli.png">
