--- a/odin-recipes/recipes/porkChop.html
+++ b/odin-recipes/recipes/porkChop.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="../recipePage.css">
 </head>
 <body>
-<div>
+<div id="title">
 <h1>Pork Chop</h1>
 </div>
   <img src="../images/porkChops.png">
